z-index fix?

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 h1 {
+  z-index: 0;
   color:#6495ED;
   font-family: 'Dancing Script', cursive;
   text-align: center;
@@ -8,6 +9,7 @@ h1 {
 }
 
 img {
+  z-index: 0;
   display: block;
   width: 175px;
   margin-left: auto;
@@ -24,7 +26,7 @@ body {
 }
 
 #grad{
-  z-index: 0;
+  z-index: 1;
   float: none;
   position: absolute;
   background: linear-gradient( to bottom right, #40E0D0, #6495ED);
